fixed overflowing tech used icons

--- a/frontend/src/styles/modules/Projects.module.css
+++ b/frontend/src/styles/modules/Projects.module.css
@@ -128,6 +128,7 @@
     align-items: center;
     margin: 15px 20px 0px;
     width: fit-content;
+    flex-wrap: wrap;
 }
 
 .techUsed img {
